update adafruit api